[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["MATwave <stanislav.matveew@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
gunicorn = "^20.1.0"
uvicorn = "^0.22.0"
loguru = "^0.7.0"
aiohttp = "^3.8.4"
python-dotenv = "^1.0.0"
orjson = "^3.8.12"
fastapi-limiter = "^0.1.5"
aioredis = "^2.0.1"
pytest = "^7.3.1"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
