[tool.poetry]
name = "async-api"
version = "0.1.0"
description = ""
authors = ["MATwave <stanislav.matveew@yandex.ru>"]
readme = "README.md"
packages = [{include = "async_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
gunicorn = "^20.1.0"
uvicorn = "^0.22.0"
aioredis = "<=2.0.1"
python-dotenv = "^1.0.0"
elasticsearch = "^8.7.0"
orjson = "^3.8.12"
aiohttp = "^3.8.4"
jwt = "^1.3.1"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
